Skin: Fix tab icon/text alignment on OSX
(integrated from master branch change 7042012 by Nathan Rijksen <n.rijksen@gmail.com>)

--- a/src/chrome/komodo/skin/plat/mac/tabs.less
+++ b/src/chrome/komodo/skin/plat/mac/tabs.less
@@ -47,9 +47,17 @@ tabbox#tabbed-view tab,
     border-top: @tab-box-border;
 }
 
-tabbox#tabbed-view tab .tab-text
+tabbox#tabbed-view tab 
 {
-    text-align: left;
+    .tab-text
+    {
+        text-align: right;
+    }
+    
+    .tab-icons
+    {
+        margin-left: 4px;
+    }
 }
 
 tabbox:not(.native):not(#tabbed-view):not(#variables-tabpanels):not(.tabs-bottom)
